index.css
* {
	box-sizing: border-box;
  }
  
  body {
	font-family: "Poppins",
	sans-serif; 
	font-size: 20px;
	color: #2B2D42;
	text-align: center;
	line-height: 1.5;
	margin:0em;
	}
	/* moved this into main so nav and foooter stretch to the edges */
	main{
		margin:8px;
	}
	
	/* ////////////////////nav styling/////////////////// */
	
  nav {
		top: 0;
		left: 0;
		right: 0;
		z-index: 10;
		background: black;
		padding-bottom: .5em;
	}
	
	.nav-links:focus{
		list-style-type: none;
		text-align: right;
		padding-right: 10px;
	}
	
	.nav-live-link, footer{ 
		color: aquamarine;
		text-shadow: 5px 1px 9px #f226d2;
		-webkit-transition-duration: .8s;
		transition-duration: .8s;
	}
	.nav-live-link:hover{
		color:red;
	}


	footer{
		background:black;
	}
	
	/* //////////////////////section styling//////////////// */
	
	header {
	padding-top: 12%;
	/* border: solid 1px purple; */
	}

	.hello-world{
		/* border: solid blue 1px; */
		margin-top:3em;
	}

	.profilePic{
		border-radius: 2em;
		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
		/* border: solid blue 1px; */
	}
  
  section {
	min-height: 200px;
	/* padding: 6% 0; */
	}

	.projectDetails, .meDetails{
		max-width: 850px;
		display: inline-flex;
	}

	/* ////////////////Project Styling ////////////// */


	.giftex-img, .eventGuide-img, .flashQuiz-img{
		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
		border-radius: 1em;
	}

	.languages{
		list-style-type: none;
	}

	.projBtn, .resume-btn{
		/* border: dashed teal 1px; */
		padding: .5em;
		text-align: center;
		text-decoration: none;
		margin-left: .2em;
		border-radius: 1em;
		color: rgb(117, 11, 117);
	}

	.projBtn:hover, .resume-btn:hover{
		-webkit-transition-duration: .8s;
		transition-duration: .8s;
		background: black;
		color: white;
	}
	
		/* ////////////////Media queries ////////////// */
	@media only screen and (max-width: 320px){
		.profilePic, .projectImg{
			width: 100%;
		}
	}

	@media only screen and (min-width: 320px) {
		nav{
			position: absolute;
			/* border: solid 1px blue; */
		}
		.nav-links{
			list-style-type: none;

			/* padding-inline-start: 1em; */
		}
		.link{
			/* display: inline; */
			float: right;
			padding: .2em;
			font-size: 80%;
			/* width: 33.33%;  */
		}

		section {
			margin: 18% 0;
		}

		.profilePic, .projectImg{
			width: 100%;
		}
	
		.language {
			text-align: left;
			margin-inline-start: 4em;
		}
	}

	@media only screen and (min-width: 400px){
		section{
			margin: 50px 0;
		}
		li.link{
			margin-left: 2%;
			font-size: 85%;
		}
		.languages, .language {
			padding-left: 0px;
			margin-left: 0px;
			text-align: center;
		}
		nav{
			padding-right: 2em;
		}
	}

	@media only screen and (min-width: 480px){
		.profilePic{
			max-width: 464px;
		}

		.projectImg{
			max-width: 800px;
		}

		li.link{
			font-size: 100%;
		}
		section {
			min-height: 200px;
			padding: 3% 0;
			}
	}

	@media only screen and (min-width: 800px){
		.hello-world{
			margin-top: .8em;
			font-size: 2.5em;
		}

		header{
			padding-top: 5em;
		}
	}	

